updated a small markup change to developer index page

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -1,4 +1,4 @@
-<div class="container">
+
   <div class="developer">
   
     <div class="row">
@@ -10,14 +10,14 @@
   
     <div class="test">
       <div class="row">
-        <div class="col-sm-5">
+        <div class="col-sm-4 col-sm-offset-1">
           <div class="devIcons">
             <p><a href="#"><img src="/img/browser2.svg" width="120" alt="browser"></a></p>
             <h5>On your website</h5>
             <p>Start accepting payments on your website, with our JavaScript libraries. <a href="#">Learn more</a></p>
           </div>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm-4 col-sm-offset-1">
           <div class="devIcons">
             <p><a href="#"><img src="/img/mobiles1.svg" width="120" alt="mobiles"></a></p>
             <h5>In your mobile app</h5>
@@ -44,5 +44,5 @@
     </div>
   
   </div>
-</div>
+
       
