--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -1,48 +1,43 @@
+<div class="developer">
 
-  <div class="developer">
-  
-    <div class="row">
-      <div class="col-sm-10">
-        <h1>Getting Started</h1>
-        <p>Below you'll find tutorials that will teach you how to use Evercam, and reference documentation for all the moving parts.</p>
-      </div>
+  <div class="row">
+    <div class="col-sm-10">
+      <h1>Getting Started</h1>
+      <p>Welcome to the developer area. Here you'll find all the API references and links to client libraries that you'll need to get started with Evercam today.</p>
     </div>
-  
-    <div class="test">
-      <div class="row">
-        <div class="col-sm-4 col-sm-offset-1">
-          <div class="devIcons">
-            <p><a href="#"><img src="/img/browser2.svg" width="120" alt="browser"></a></p>
-            <h5>On your website</h5>
-            <p>Start accepting payments on your website, with our JavaScript libraries. <a href="#">Learn more</a></p>
-          </div>
-        </div>
-        <div class="col-sm-4 col-sm-offset-1">
-          <div class="devIcons">
-            <p><a href="#"><img src="/img/mobiles1.svg" width="120" alt="mobiles"></a></p>
-            <h5>In your mobile app</h5>
-            <p>We have the toolkits for native iPhone and Android applications. <a href="#">Learn more</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="col-sm-10">
-        <div class="bottomRow">
-          <h5>Need Help?</h5>
-          <p>We&apos;re always happy to help out with code or any other questions you might have. <a href="#">Learn more</a></p>
-          <h5>API mailing list</h5>
-          <p>Building a third party integration or Connect application? Join our mailing list to be notified of API changes and stay up to date. <a href="#">View mailing list</a></p>
-          <h5>Resources</h5>
-          <ul>
-            <li><a href="#">API Libraries</a></li>
-            <li><a href="#">Example Projects</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  
   </div>
 
-      
+  <div class="row">
+    <div class="col-sm-4 col-sm-offset-1">
+      <div class="devIcons">
+        <p><a href="#"><img src="/img/browser2.svg" height="120" alt="browser"></a></p>
+        <h5>On your website</h5>
+        <p>Add a camera to you website today with our opensource JavaScript libraries. <a href="#">Learn more</a></p>
+      </div>
+    </div>
+    <div class="col-sm-4 col-sm-offset-1">
+      <div class="devIcons">
+        <p><a href="#"><img src="/img/mobiles1.svg" height="120" alt="mobiles"></a></p>
+        <h5>In your applications</h5>
+        <p>We provide client bindings for most major programming languages. <a href="#">Learn more</a></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-10">
+      <div class="bottomRow">
+        <h5>Getting help</h5>
+        <p>We&apos;re always happy to help out with any technical questions or concerns you have and we love to hear about projects using Evercam. You can either contact us using the <a href="/contact">online</a> form or you'll usually find one of us in <a href="http://webchat.freenode.net">#evercam</a> on IRC freenode.</p>
+        <h5>Starting points</h5>
+        <p>After <a href="/signup">signing up</a> and confirming your account, we recommend the following starting points as they quickly cover what most developers want to achieve.</p>
+        <ul>
+          <li><a href="/docs/api/v1/authentication">Authenticating to the API</a></li>
+          <li><a href="/docs/api/v1/streams#post">Connecting a new Stream</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+</div>
+
