updated links on developer homepage to link to github

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -12,14 +12,14 @@
       <div class="devIcons">
         <p><a href="#"><img src="/img/browser2.svg" height="120" alt="browser"></a></p>
         <h5>On your website</h5>
-        <p>Add a camera to you website today with our opensource JavaScript libraries. <a href="#">Learn more</a></p>
+        <p>Add a camera to your website today with our JavaScript libraries. <a href="https://github.com/evercam/evercam.js" target="_blank">Learn more</a></p>
       </div>
     </div>
     <div class="col-sm-4 col-sm-offset-1">
       <div class="devIcons">
         <p><a href="#"><img src="/img/mobiles1.svg" height="120" alt="mobiles"></a></p>
         <h5>In your applications</h5>
-        <p>We provide client bindings for most major programming languages. <a href="#">Learn more</a></p>
+        <p>We also provide client libraries for most major programming languages. <a href="https://github.com/evercam" target="_blank">Learn more</a></p>
       </div>
     </div>
   </div>
