updated missing links on the developer homepage icons

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -10,16 +10,16 @@
   <div class="row">
     <div class="col-sm-4 col-sm-offset-1">
       <div class="devIcons">
-        <p><a href="#"><img src="/img/browser2.svg" height="120" alt="browser"></a></p>
+        <p><a href="https://github.com/evercam/evercam.js" target="_blank" title="On your website"><img src="/img/browser2.svg" height="120" alt="browser"></a></p>
         <h5>On your website</h5>
-        <p>Add a camera to your website today with our JavaScript libraries. <a href="https://github.com/evercam/evercam.js" target="_blank">Learn more</a></p>
+        <p>Add a camera to your website today with our JavaScript libraries. <a href="https://github.com/evercam/evercam.js" target="_blank" title="On your website">Learn more</a></p>
       </div>
     </div>
-    <div class="col-sm-4 col-sm-offset-1">
+    <div class="col-sm-4">
       <div class="devIcons">
-        <p><a href="#"><img src="/img/mobiles1.svg" height="120" alt="mobiles"></a></p>
+        <p><a href="https://github.com/evercam" target="_blank" title="In your applications"><img src="/img/mobiles1.svg" height="120" alt="mobiles"></a></p>
         <h5>In your applications</h5>
-        <p>We also provide client libraries for most major programming languages. <a href="https://github.com/evercam" target="_blank">Learn more</a></p>
+        <p>We also provide client libraries for most major programming languages. <a href="https://github.com/evercam" target="_blank" title="In your applications">Learn more</a></p>
       </div>
     </div>
   </div>
