--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -29,13 +29,13 @@
 			<div class="address">
 				<div class="col-md-6">
 					<h4>Dublin</h4>
-					<p>12 Parnell Square East, Dublin 1, <br/>Ireland</p>
+					<p>The Ierne Ballroom, 12 Parnell Square East, Dublin 1, <br/>Ireland</p>
 					<p>Telephone:  +353 (1) 538 3333</p>
 					<p>E-Mail: <a href="mailto:info@evercam.io">howrya@evercam.io</a></p>
-					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
+					<div class="map"><iframe src="https://mapsengine.google.com/map/edit?mid=zh1DGuTpEFJo.kRhDf4NgOy10" width="640" height="480"></iframe></small></div>
 				</div>
 				<div class="col-md-6">
-					<h4>Silicon Valley</h4>
+					<h4>Mountain View, California</h4>
 					<p>800 W. El Camino Real, Suite 350, Mountain View,<br/> CA 94040, USA</p>
 					<p>Telephone:  +1 (650) 419 3588</p>
 					<p>E-Mail: <a href="mailto:info@evercam.io">whassup@evercam.io</a></p>
@@ -44,5 +44,5 @@
 			</div><!-- end address -->
 		</div> 
 	</div> 
-</div>
+</div>https://mapsengine.google.com/map/edit?mid=zh1DGuTpEFJo.kRhDf4NgOy10
  
