--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -32,7 +32,7 @@
 					<p>The Ierne Ballroom, 12 Parnell Square East, Dublin 1, <br/>Ireland</p>
 					<p>Telephone:  +353 (1) 538 3333</p>
 					<p>E-Mail: <a href="mailto:info@evercam.io">howrya@evercam.io</a></p>
-					<div class="map"><iframe src="https://mapsengine.google.com/map/edit?mid=zh1DGuTpEFJo.kRhDf4NgOy10" width="640" height="480"></iframe></small></div>
+					<div class="map"><iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zo2fMMAkgMMs.kuabCDr3nlic" width="640" height="480"></iframe></small></div>
 				</div>
 				<div class="col-md-6">
 					<h4>Mountain View, California</h4>
