updated developer homepage irc link to auto-connect

--- a/app/web/views/docs/index.erb
+++ b/app/web/views/docs/index.erb
@@ -28,7 +28,7 @@
     <div class="col-sm-10">
       <div class="bottomRow">
         <h5>Getting help</h5>
-        <p>We&apos;re always happy to help out with any technical questions or concerns you have and we love to hear about projects using Evercam. You can either contact us using the <a href="/contact">online</a> form or you'll usually find one of us in <a href="http://webchat.freenode.net">#evercam</a> on IRC freenode.</p>
+        <p>We&apos;re always happy to help out with any technical questions or concerns you have and we love to hear about projects using Evercam. You can either contact us using the <a href="/contact">online</a> form or you'll usually find one of us in <a href="http://webchat.freenode.net/?randomnick=1&channels=%23evercam">#evercam</a> on IRC freenode.</p>
         <h5>Starting points</h5>
         <p>After <a href="/signup">signing up</a> and confirming your account, we recommend the following starting points as they quickly cover what most developers want to achieve.</p>
         <ul>
