--- a/app/web/public/css/template.bootstrap.css
+++ b/app/web/public/css/template.bootstrap.css
@@ -2637,13 +2637,14 @@ width: 100px;
   font-size: 16px;
   height: 40px;
   margin-right: 20px;
+  margin-top: 2px;
   padding: 10px 20px;
   vertical-align: top;
   width: 100%;
 }
 
 .form-horizontal .control-label{
-  padding-top: 5px;
+  padding-top: 7px;
   color: #4D4D4D;
   font-size: 18px;
 }
@@ -2663,6 +2664,12 @@ width: 100px;
   font-size: 26px;
   text-align: center;
   padding: 20px 0 20px 0;
+}
+
+.addCamera_container p{
+  text-align: left;
+  padding: 5px 0 0 0;
+  margin: 0;
 }
 
 #add{
