removed markup from contact page

--- a/app/web/views/contact.erb
+++ b/app/web/views/contact.erb
@@ -44,5 +44,5 @@
 			</div><!-- end address -->
 		</div> 
 	</div> 
-</div>https://mapsengine.google.com/map/edit?mid=zh1DGuTpEFJo.kRhDf4NgOy10
+</div>
  
