--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -66,3 +66,26 @@
     </div>
   </div>
 </div>
+<div class="streamList">
+
+  <div class="row">
+    <div class="col-sm-3">
+      <img src="rememberance.jpg" width="200px">
+    </div>
+    <div class="col-sm-5">
+      <h4>name</h4>
+      <p>Details about the camera</p>
+    </div>
+    <div class="col-sm-4">
+      <p>Online Button</p>
+      <p>Another Button</p>
+    </div>
+  </div>
+  
+  
+  
+  
+  
+  
+</div>
+  
