--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -70,15 +70,18 @@
 
   <div class="row">
     <div class="col-sm-3">
-      <img src="rememberance.jpg" width="200px">
+      <img src="/img/rememberance.jpg" width="250px">
     </div>
     <div class="col-sm-5">
       <h4>name</h4>
       <p>Details about the camera</p>
     </div>
     <div class="col-sm-4">
-      <p>Online Button</p>
-      <p>Another Button</p>
+      <p><i class="fa fa-2x fa-heart-o icon-align-center"></i>Online</p>
+      <p><button type="button" class="btn btn-primary">Action</button></p>
+      <a href="#" class="iconhover"><i class="fa fa-3x fa-envelope"></i></a>
+      <a href="#" class="iconhover"><i class="fa fa-3x fa-clock-o"></i></a>
+      <a href="#" class="iconhover"><i class="fa fa-3x fa-android icon-5x icon-align-center"></i></a>
     </div>
   </div>
   
