--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -4,6 +4,40 @@
     <p>We're working super hard to bring you a <strong>great</strong> Evercam experience, until then why not browse through our ever growing documentation and think about all the wonderful apps that are headed your way.</p>
     <p>Best regards,<br />The Evercam Team.</p>
 
+<div class="streamList">
+  <div class="streamContainer">
+    <div class="row">
+      <div class="col-sm-4">
+        <img src="/img/rememberance.jpg" width="370px">
+      </div>
+      <div class="col-sm-5">
+        <h4>Camera Name</h4>
+        <ul>
+          <li>Details about the camera</li>
+          <li>Details about the camera</li>
+          <li>Details about the camera</li>
+        </ul>
+      </div>
+      <div class="col-sm-3">
+        <p><i class="fa fa-2x fa-heart-o icon-align-center"></i>Online</p>
+        <p><button type="button" class="btn btn-primary">Action</button></p>
+        <a href="#" class="iconhover"><i class="fa fa-3x fa-envelope"></i></a>
+        <a href="#" class="iconhover"><i class="fa fa-3x fa-clock-o"></i></a>
+        <a href="#" class="iconhover"><i class="fa fa-3x fa-android icon-5x icon-align-center"></i></a>
+      </div>
+    </div>
+  
+</div>
+
+</div>
+<div class="border-1"></div>
+
+
+  
+  
+  
+  
+  
     <div class="addCamera_container">
       <h1>Camera Details</h1>
       <form class="form-horizontal" role="form">
@@ -66,7 +100,6 @@
     </div>
   </div>
 </div>
-<div class="streamList">
 
   <div class="row">
     <div class="col-sm-3">
