--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -1,8 +1,8 @@
-<div class='col-sm-10 col-sm-offset-1'>
-  <div class="addCamera">
-    <h1>Hi <%= @user.forename %></h1>
-    <p>We're working super hard to bring you a <strong>great</strong> Evercam experience, until then why not browse through our ever growing documentation and think about all the wonderful apps that are headed your way.</p>
-    <p>Best regards,<br />The Evercam Team.</p>
+
+<div class="addCamera">
+  <h1>Hi <%= @user.forename %></h1>
+  <p>We're working super hard to bring you a <strong>great</strong> Evercam experience, until then why not browse through our ever growing documentation and think about all the wonderful apps that are headed your way.</p>
+  <p>Best regards,<br />The Evercam Team.</p>
 
   <!-- Button trigger modal -->
 
@@ -21,44 +21,26 @@
     <div class="streamList">
       <div class="streamContainer">
         <div class="row">
-          <div class="col-sm-4">
-            <img src="/img/rememberance.jpg" width="280px">
-          </div>
-          <div class="col-sm-5">
-              <h4><img src="/img/e_RED_DOT.svg" width="30px">Rememberance Cam</h4>
+          <div class="CameraInfo">
+          <div class="col-sm-12">
+  
+            
+              
+           <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
+            
+              <h4>Rememberance Cam</h4>
+              <div class="onOffline">
+              <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+              </div>
               <p>Details about the camera</p>
               <p>Details about the camera</p>
-              <p>Details about the camera</p>
-          </div>
-          <div class="col-sm-3">
-            <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-envelope"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-clock-o"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-android icon-5x icon-align-center"></i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+              <p class="userInfo">Last entry user info goes here...</p>
+            </div>
+              
 
-<div class="border-1"></div>
-
-<div class="row">
-  <div class="col-sm-10 col-sm-offset-1">
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="col-sm-4">
-            <img src="/img/rememberance.jpg" width="280px">
-          </div>
-          <div class="col-sm-5">
-            <h4>Camera Name</h4>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
+              
+              
+              
           </div>
           <div class="col-sm-3">
             <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
@@ -83,55 +65,32 @@
       <div class="streamContainer">
         <div class="row">
           <div class="col-sm-4">
-            <img src="/img/rememberance.jpg" width="280px">
+            <img src="/img/rememberance.jpg" width="260px">
           </div>
-          <div class="col-sm-5">
-            <h4>Camera Name</h4>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
-          </div>
-          <div class="col-sm-3">
-            <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-envelope"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-clock-o"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-android icon-5x icon-align-center"></i></a>
+          <div class="col-sm-8">
+          
+            <div class="lineTest">
+              <h4>Rememberance Cam</h4>
+            </div>
+                          <div class="onOffline">
+                          <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                          </div>
+            <p>Details about the camera</p>
+            <p>Details about the camera</p>
+            <h5>Last Entry:</h5>
+            <p class="userInfo">Last entry user info goes here...</p>
+              
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<<<<<<< HEAD
-  <div class="row">
-    <div class="col-sm-3">
-      <img src="/img/rememberance.jpg" width="250px">
-    </div>
-    <div class="col-sm-5">
-      <h4>name</h4>
-      <p>Details about the camera</p>
-    </div>
-    <div class="col-sm-4">
-      <p><i class="fa fa-2x fa-heart-o icon-align-center"></i>Online</p>
-      <p><button type="button" class="btn btn-primary">Action</button></p>
-      <a href="#" class="iconhover"><i class="fa fa-3x fa-envelope"></i></a>
-      <a href="#" class="iconhover"><i class="fa fa-3x fa-clock-o"></i></a>
-      <a href="#" class="iconhover"><i class="fa fa-3x fa-android icon-5x icon-align-center"></i></a>
-    </div>
-  </div>
-  
-  
-  
-  
-  
-  
-</div>
-  
-=======
 <div class="border-1"></div>
+
+
+
+
 
 <br/>
 
@@ -197,4 +156,3 @@
 </div><!-- /.modal -->
  
 </div>
->>>>>>> updated markup and styling on views.erb
