--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -22,33 +22,17 @@
       <div class="streamContainer">
         <div class="row">
           <div class="CameraInfo">
-          <div class="col-sm-12">
-  
-            
-              
-           <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
-            
+            <div class="col-sm-12">
+              <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
               <h4>Rememberance Cam</h4>
-              <div class="onOffline">
-              <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+              <div class="online">
+                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
               </div>
               <p>Details about the camera</p>
               <p>Details about the camera</p>
+              <h5>Last Entry:</h5>
               <p class="userInfo">Last entry user info goes here...</p>
             </div>
-              
-
-              
-              
-              
-          </div>
-          <div class="col-sm-3">
-            <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <p><button type="button" class="btn btn-primary">Action</button></p>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-envelope"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-clock-o"></i></a>
-            <a href="#" class="iconhover"><i class="fa fa-2x fa-android icon-5x icon-align-center"></i></a>
           </div>
         </div>
       </div>
@@ -58,33 +42,30 @@
 
 <div class="border-1"></div>
 
-
 <div class="row">
   <div class="col-sm-10 col-sm-offset-1">
     <div class="streamList">
       <div class="streamContainer">
         <div class="row">
-          <div class="col-sm-4">
-            <img src="/img/rememberance.jpg" width="260px">
-          </div>
-          <div class="col-sm-8">
-          
-            <div class="lineTest">
+          <div class="CameraInfo">
+            <div class="col-sm-12">
+              <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
               <h4>Rememberance Cam</h4>
+              <div class="offline">
+                <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+              </div>
+              <p>Details about the camera</p>
+              <p>Details about the camera</p>
+              <h5>Last Entry:</h5>
+              <p class="userInfo">Last entry user info goes here...</p>
             </div>
-                          <div class="onOffline">
-                          <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
-                          </div>
-            <p>Details about the camera</p>
-            <p>Details about the camera</p>
-            <h5>Last Entry:</h5>
-            <p class="userInfo">Last entry user info goes here...</p>
-              
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
+
 
 <div class="border-1"></div>
 
