--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -14,66 +14,134 @@
     </div>
   </div>
   
-<div class="border-1"></div>
+  <div class="border-1"></div>
   
-<div class="row">
-  <div class="col-sm-10 col-sm-offset-1">
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="CameraInfo">
-            <div class="col-sm-12">
-              <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
-              <h4>Rememberance Cam</h4>
-              <div class="online">
-                <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <div class="streamList">
+        <div class="streamContainer">
+          <div class="row">
+            <div class="CameraInfo">
+              <div class="col-sm-12">
+                <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
+                <h4>Rememberance Cam</h4>
+                <div class="online">
+                  <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+                </div>
+                <p>Details about the camera</p>
+                <p>Details about the camera</p>
+                <h5>Last Entry:</h5>
+                <p class="userInfo">Last entry user info goes here...</p>
               </div>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
-              <h5>Last Entry:</h5>
-              <p class="userInfo">Last entry user info goes here...</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="border-1"></div>
+  <div class="border-1"></div>
 
-<div class="row">
-  <div class="col-sm-10 col-sm-offset-1">
-    <div class="streamList">
-      <div class="streamContainer">
-        <div class="row">
-          <div class="CameraInfo">
-            <div class="col-sm-12">
-              <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
-              <h4>Rememberance Cam</h4>
-              <div class="offline">
-                <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
+      <div class="streamList">
+        <div class="streamContainer">
+          <div class="row">
+            <div class="CameraInfo">
+              <div class="col-sm-12">
+                <img class="pull-left" src="/img/rememberance.jpg" width="265px" >
+                <h4>Rememberance Cam</h4>
+                <div class="offline">
+                  <p><i class="fa fa-1x fa-minus-circle icon-align-center"></i>Offline</p>
+                </div>
+                <p>Details about the camera</p>
+                <p>Details about the camera</p>
+                <h5>Last Entry:</h5>
+                <p class="userInfo">Last entry user info goes here...</p>
               </div>
-              <p>Details about the camera</p>
-              <p>Details about the camera</p>
-              <h5>Last Entry:</h5>
-              <p class="userInfo">Last entry user info goes here...</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <div class="border-1"></div>
+
+  
+  
+<br/><br/><br/>
 
 
-<div class="border-1"></div>
+
+
+  <div class="row">
+    <div class="col-sm-6">
+      
+        <div class="streamList">
+          <img class="pull-left" src="/img/rememberance.jpg" width="500px" >
+        </div>
+ </div>
+      <div class="col-sm-6">
+      <div class="stream">
+        <h4>Rememberance Cam</h4>
+        <div class="camAddress">
+          <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
+        </div>
+        <button class="btn btn-primary btn-md">Update</button>
+        <button class="btn btn-primary btn-md">Action?</button>
+        <h4>Applications</h4>
+          <div class="apps">
+            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
+            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
+            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
+          </div>
+      </div>
+      </div>
+    </div>
+
+  
+  <div class="border-1"></div>
+  
+  <div class="row">
+    <div class="col-sm-12">
+      <h4>Permissions</h4>
+      <p>Some information goes here..........</p>
+      <p>Some information goes here..........</p>
+      <p>Some information goes here..........</p>
+    </div>
+  </div>
+  
+  <div class="border-1"></div>
+  
+  <div class="row">
+    <div class="col-sm-12">
+      <h4>Activity</h4>
+      <p>Some information goes here..........</p>
+      <p>Some information goes here..........</p>
+      <p>Some information goes here..........</p>
+    </div>
+  </div>
+  
+  
 
 
 
 
 
-<br/>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -132,8 +200,8 @@
           <button type="button" class="btn btn-primary">ADD</button>
         </div>
         
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
- 
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+
 </div>
