--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -73,23 +73,30 @@
 <br/><br/><br/>
 
 
-
+  <div class="row">
+    <div class="col-sm-10 col-sm-offset-1">
 
   <div class="row">
     <div class="col-sm-6">
       
         <div class="streamList">
-          <img class="pull-left" src="/img/rememberance.jpg" width="500px" >
+          <img class="pull-left" src="/img/rememberance.jpg" width="450px" >
         </div>
- </div>
+      </div>
       <div class="col-sm-6">
       <div class="stream">
-        <h4>Rememberance Cam</h4>
+        
+        <div class="online">
+          <h4>Rememberance Cam</h4>
+          <div class="positionTest">
+            <p><i class="fa fa-1x fa-plus-circle icon-align-center"></i>Online</p>
+          </div>
+        </div>
+          
         <div class="camAddress">
           <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
         </div>
         <button class="btn btn-primary btn-md">Update</button>
-        <button class="btn btn-primary btn-md">Action?</button>
         <h4>Applications</h4>
           <div class="apps">
             <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
@@ -104,26 +111,42 @@
   <div class="border-1"></div>
   
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-6">
       <h4>Permissions</h4>
-      <p>Some information goes here..........</p>
-      <p>Some information goes here..........</p>
-      <p>Some information goes here..........</p>
+      
+      <div class="permissions">
+        <div class="table-responsive">
+          <table class="table table-condensed table-hover">
+              <tr>
+                <th>USER</th>
+                <th>APP</th>
+                <th>permission</th>
+              </tr>
+                <tr>
+                <td>..info..</td>
+                <td>..info..</td>
+                <td>..info..</td>
+              </tr>
+              <tr>
+                <td>..info..</td>
+                <td>..info..</td>
+                <td>..info..</td>
+              </tr>
+          </table>
+        </div>
+      </div>
+      
     </div>
-  </div>
-  
-  <div class="border-1"></div>
-  
-  <div class="row">
-    <div class="col-sm-12">
+    
+    <div class="col-sm-6">
       <h4>Activity</h4>
-      <p>Some information goes here..........</p>
-      <p>Some information goes here..........</p>
-      <p>Some information goes here..........</p>
+      <p>API Requests to this camera:  4837432 </p>
+      <p>Last request logged: 13th January 2013 14:12 GMT </p>
     </div>
   </div>
   
-  
+      </div>
+  </div>
 
 
 
