--- a/app/web/views/users/view.erb
+++ b/app/web/views/users/view.erb
@@ -97,12 +97,14 @@
           <p><i class="fa fa-1x fa-map-marker icon-align-center blue"></i>Garden of Rememberence, Parnell Square, Dublin 1.</p>
         </div>
         <button class="btn btn-primary btn-md">Update</button>
-        <h4>Applications</h4>
-          <div class="apps">
-            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
-            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
-            <i class="fa fa-1x fa-map-marker icon-align-center blue"></i>
-          </div>
+        <div class="applications">
+          <h4>Applications</h4>
+            <div class="apps">
+              <i class="fa fa-2x fa-clock-o icon-align-center blue"></i>
+              <i class="fa fa-2x fa-envelope icon-align-center blue"></i>
+              <i class="fa fa-2x fa-android icon-align-center blue"></i>
+            </div>
+        </div>
       </div>
       </div>
     </div>
@@ -112,15 +114,17 @@
   
   <div class="row">
     <div class="col-sm-6">
+    
       <h4>Permissions</h4>
       
       <div class="permissions">
         <div class="table-responsive">
           <table class="table table-condensed table-hover">
               <tr>
-                <th>USER</th>
-                <th>APP</th>
-                <th>permission</th>
+                <th>User</th>
+                <th>App</th>
+                <th>Permision</th>
+                <th><span class="glyphicon glyphicon-trash"></span></th>
               </tr>
                 <tr>
                 <td>..info..</td>
@@ -140,11 +144,17 @@
     
     <div class="col-sm-6">
       <h4>Activity</h4>
-      <p>API Requests to this camera:  4837432 </p>
-      <p>Last request logged: 13th January 2013 14:12 GMT </p>
+      <div class="activityBox">
+        <p><span class="glyphicon glyphicon-play" style="font-size:15px"></span>API Requests to this camera:  4837432 </p>
+        <p><span class="glyphicon glyphicon-play"></span>Last request logged: 13th January 2013 14:12 GMT </p>
+      </div>
     </div>
   </div>
   
+  
+    <div class="border-1"></div>
+    
+    <br/><br/><br/>
       </div>
   </div>
 
